Changes from jTDS 0.8-rc1
=========================

04/01/2004 - Alin Sinpalean
 o Fixed an issue in TdsSocket that was causing queued output not to be flushed
   when sendNetPacket() was called (i.e. a packet from the middle of the request
   was sent out first causing SQL Server to close the connection).
 o Initialized the charset field of TdsDataSource to the empty String (bug
   #927764).

04/01/2004 - Brian Heineman
 o Updated ResultSet.updateObject() to work properly with Blob and Clob values.
 o Corrected ClasCastException when Blob or Clob values were used with cursor
   result sets.
 o Updated savepoint SQL to use SAVE TRAN/ROLLBACK TRAN instead of
   SAVE TRANSACTION/ROLLBACK TRANSACTION.

03/31/2004 - Alin Sinpalean
 o Added a test for bug #926620 (Too long value for VARCHAR field) and fixed it
   by adding a test in Tds.executeProcedureInternal().
 o Added code to set the maximum length of BINARY/VARBINARY fields in
   ParameterUtils.createParameterMapping(), because the test added to Tds was
   causing binary parameters throw exceptions every time.
 o Reduced the size of the TimestampTest.testNestedStatements0022() and
   TimestampTest.testNestedStatements0026(), because they were running
   incredibly slow on my development machine and did not help at all.

03/30/2004 - Alin Sinpalean
 o Silently updated the JUnit and Ant jars in the 0.8-rc1 source packet.
 o Moved the Savepoint-related methods from TdsConnection into a new class,
   TdsConnectionJDBC3. Now new Connections are dynamically created from one of
   the two classes depending on the Java specification version of the JVM.
 o Added some more old date tests, still haven't been able to reproduce anything
   on my machine.
 o Added patch #926168 (add some meta-info to jar manifest) submitted by Fedor
   Karpelevitch.
 o Updated the connection.properties template to include the user property.

03/28/2004 - Brian Heineman
 o Implemented Savepoint support.