@@ -1,6 +1,11 @@
 Changes from jTDS 0.8-rc1
 =========================
 
+04/02/2004 - Brian Heineman
+ o Cleaned up EncodingHelper in preperation for Clob stream support; removed
+   initialization logic for Microsofts VM (which jTDS is no longer compatible
+   with as it uses Java 2 classes).
+
 04/01/2004 - Alin Sinpalean
  o Fixed an issue in TdsSocket that was causing queued output not to be flushed
    when sendNetPacket() was called (i.e. a packet from the middle of the request
